# mpnrl

./: .gitignore  README.md  compare_dataloaders.ipynb  compare_dataloaders.py  demo_cpu.sh  pyproject.toml  run.py
demos/: all_nli_mnrl.ipynb  compare_dataloaders.ipynb  train_allnli.ipynb
src/mpnrl/: __init__.py  collator.py  data_collator.py  loss.py
src/mpnrl/losses/: MultiplePositivesNegativesRankingLoss.py  __init__.py
