[build-system]
requires = ["setuptools >= 61.0.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "mpnrl"
dynamic = ["version"]
description = "Multiple Positives and Negatives Ranking Loss"
readme = "README.md"
license = { file = "LICENSE" }
dependencies = [
    "sentence-transformers>=3.3.1",
]
requires-python = ">=3.9"
authors = [
    { name = "Kush Dubey", email = "kushdubey63@gmail.com" },
]
maintainers = [
    { name = "Kush Dubey", email = "kushdubey63@gmail.com" },
]

[project.optional-dependencies]
demos = [
    "accelerate>=0.20.3",
    "datasets",
    "jupyter>=1.0.0",
    "polars>=1.0.0",
    "seaborn>=0.13.0",
    "wandb",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = {attr = "mpnrl.__version__"}

[tool.ruff]
include = ["*.py"]
line-length = 88
indent-width = 4
extend-include = ["*.ipynb"]

[project.urls]
Homepage = "https://github.com/kddubey/mpnrl"
Issues = "https://github.com/kddubey/mpnrl/issues"
